<resources>
    <string name="app_name">BigPig</string>

    <string name="player_name1">Player 1</string>
    <string name="player_edit1" >Person</string>

    <string name="player_name2">Player 2</string>
    <string name="player_edit2">Comp</string>

    <string name="score">P1 Score</string>
    <string name="score1TV">0</string>

    <string name="score2">P2 Score</string>
    <string name="score2TV">0</string>

    <string name="turn">Who\'s turn</string>
    <string name="points">Points for this turn</string>
    <string name="pointsTV">0</string>

    <string name="picDescription">DieRoll</string>
    <string name="dieRoll">Roll Die</string>

    <string name="endTurn">End Turn</string>

    <string name="newGame">New Game</string>

    <string name="num_die">Number of Die</string>
    <string name="num_die_text">1</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="title_activity_settings">Settings</string>

    <string name="number_of_die_title">Number of Die</string>
    <string name="num_die_summary">Change the number of die you want to play with.</string>
    <string-array name="number_of_die">
        <item >One</item>
        <item >Two</item>
        <item >Three</item>
    </string-array>
    <string-array name="number_of_die_values">
        <item >1</item>
        <item >2</item>
        <item >3</item>
    </string-array>
    <string name="number_of_die_default">1</string>

    <string name="high_score_title">High Score</string>
    <string name="high_score_summary">Select the score you want to play to.</string>
    <string-array name="high_score">
        <item >75</item>
        <item >100</item>
        <item >150</item>
        <item >200</item>
    </string-array>
    <string-array name="high_score_values">
        <item >75</item>
        <item >100</item>
        <item >150</item>
        <item >200</item>
    </string-array>
    <string name="high_score_default">100</string>

    <string name="evil_die_title">Evil Die</string>
    <string name="evil_die_summary">Change which die erases your current points.</string>
    <string-array name="evil_die_numbers">
        <item >One</item>
        <item >Two</item>
        <item >Three</item>
        <item >Four</item>
        <item >Five</item>
        <item >Six</item>
        <item >Seven</item>
        <item >Eight</item>
    </string-array>
    <string-array name="evil_die_values">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
    </string-array>
    <string name="evil_die_default">8</string>

    <string name="gameDescription">Welcome to Big Pig!</string>
</resources>
