<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/player1Label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/player_name1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2Label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="60dp"
        android:text="@string/player_name2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/player1Label"
        app:layout_constraintTop_toTopOf="@+id/player1Label" />

    <EditText
        android:id="@+id/player1EditText"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/player_edit1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/player1Label"
        app:layout_constraintStart_toStartOf="@+id/player1Label"
        app:layout_constraintTop_toBottomOf="@+id/player1Label" />

    <EditText
        android:id="@+id/player2EditText"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player_edit2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/player2Label"
        app:layout_constraintStart_toStartOf="@+id/player2Label"
        app:layout_constraintTop_toBottomOf="@+id/player2Label" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="@string/newGame"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/player2EditText"
        app:layout_constraintStart_toEndOf="@+id/player1EditText"
        app:layout_constraintTop_toBottomOf="@+id/player2EditText" />

    <TextView
        android:id="@+id/gameRulesTextView"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gameDescription"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/player1EditText"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton" />

</androidx.constraintlayout.widget.ConstraintLayout>